--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ local.properties
 
 # TeXlipse plugin
 .texlipse
+
+
+# Project specific #
+####################
+# Java build folder
+ArduinoApplet/build
