SketchCreator now creates directories and has partial unit tests. ServerCompilerSettings now checks if compiler and sketch directories are valid. Updated gitignore to ignore all files starting with "TestTemp_", as this suffix will be used for temporary files during testing. launch file does not do all the simple code test for open files and com ports

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,6 @@ BlocklyDuinoSketch.ino
 
 # Server App settinsg file generated
 ServerCompilerSettings.ini
+
+# Anything starting with this is created as a unit/module testing temporal file
+TestTemp_*
